syntax = "proto3";

package xai_api;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

import "google/protobuf/timestamp.proto";

// DeferredStatus indicates the status of a deferred completion
enum DeferredStatus {
  INVALID_DEFERRED_STATUS = 0;
  DONE = 1;
  EXPIRED = 2;
  PENDING = 3;
}

// GetDeferredRequest requests a deferred completion by ID
message GetDeferredRequest {
  string request_id = 1;
}

// StartDeferredResponse contains the request ID for a started deferred completion
message StartDeferredResponse {
  string request_id = 1;
}
